fix overflow

--- a/less/categories.less
+++ b/less/categories.less
@@ -97,7 +97,7 @@
 			}
 
 			.post-content {
-				overflow-y: hidden;
+				overflow: hidden;
 				blockquote {
 					display: none;
 				}
